# pano

./: .coverage  .env.sample  .gitignore  DEVELOPING.md  Dockerfile  README.md  alembic.ini  coverage.xml  fuck.py  notes.md  pyproject.toml
.github/workflows/: build-push-image.yaml  checkov.yaml  deploy-to-k8s.yaml  lint.yaml  no_debug_allowed.yaml  no_forgoten_migrations.yaml  publish-and-deploy.yaml  run-integ-tests.yaml  run_django_tests.yaml  run_tests.yaml
dev/: docker-compose.yml  garage.toml  minio-gh.Dockerfile
infra/helm/garage/: Chart.yaml  values.yaml
infra/helm/garage/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
infra/helm/minio/: values.yaml
infra/helm/minio/templates/: deployment.yaml  minio-dev.yaml  pvc.yaml  secrets.yaml  service.yaml
infra/helm/pano/: Chart.yaml  values.yaml
infra/helm/pano/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  (+4 more)
migrations/: env.py
migrations/versions/: eb0db99e1493_initial_revision.py
scripts/: create_pano_user.sql
src/: db.py  github_sync.py  jwt_token_auth.py  main.py  meshdb_client.py  pano.py  settings.py  storage.py  storage_git.py  storage_github.py  storage_minio.py
src/models/: image.py  panorama.py  transition.py  user.py
src/pano.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: sample_data.py  test_api.py  test_api_authenticated.py  test_image.py  test_pano.py  test_panodb.py  test_server.py  test_storage_minio.py
tests/unit/: test_noop.py
(+1 files in other folders)
