[project]
name = "pano"
version = "0.0.1"

dependencies = [
	"minio==7.2.*",
	"PyGithub==2.3.*",
	"python-dotenv==1.0.*",
	"GitPython==3.1.*",
	"pymeshdb@git+https://github.com/willnilges/pymeshdb.git",
	"dropbox==12.0.*",
	"Flask==3.0.*",
	"Flask-Cors==5.0.*",
	"Wand==0.6.*",
	"SQLAlchemy==2.0.*",
	"psycopg[binary,pool]==3.2.*",
	"gunicorn==23.0.*",
	"PyJWT==2.10.*",
]

[project.optional-dependencies]
dev = [
    "black==23.7.*",
    "isort==5.12.*",
    "pytest==8.3.*",
]

# uv does not respect the above optional deps and only works with these dev deps.
# TODO (ming): Do we need to duplicate? Can we keep only this one?
[dependency-groups]
dev = [
    "black==23.7.*",
    "isort==5.12.*",
    "pytest==8.3.*",
]